--- a/src/components/WorksList/WorksListItem.scss
+++ b/src/components/WorksList/WorksListItem.scss
@@ -22,6 +22,8 @@
     justify-content: center;
 }
 .nailsPicture {
+    text-align: center;
+    padding-left: 30px;
     width: 300px;
     height: 400px;
 }
