--- a/src/components/WorksList/WorksListItem.scss
+++ b/src/components/WorksList/WorksListItem.scss
@@ -27,3 +27,14 @@
     width: 300px;
     height: 400px;
 }
+.slide{
+    display: block;
+    padding-left: 450px;
+    text-align: center;
+    width: auto;
+    height: 400px;
+}
+.like{
+    height: 20px;
+    width: 20px;
+}
