--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -36,3 +36,17 @@
     color: yellow;
     font-size: 27px;
 }
+
+.category{
+    text-transform: none;
+    text-decoration: none;
+    color: white;
+    font-size: 23px;
+    display: block;
+}
+
+.category:hover{
+    transition: all 500ms;
+    color: yellow;
+    font-size: 27px;
+}
