--- a/src/components/WorksList/WorksListItem.scss
+++ b/src/components/WorksList/WorksListItem.scss
@@ -38,3 +38,10 @@
     height: 20px;
     width: 20px;
 }
+.product-info-btn{
+    display: flex;
+    justify-content: flex-end;
+    text-decoration: none;
+    color: red;
+    
+}
