--- a/src/components/Header/IconMenu/IconMenu.scss
+++ b/src/components/Header/IconMenu/IconMenu.scss
@@ -7,7 +7,7 @@
     background-color: rgba(193, 161, 240, 1);
     display: inline-flex;
     width: 65%;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
 }
 .icons {
